--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
   },
   "dependencies": {
     "@notionhq/client": "^0.4.9",
-    "gray-matter": "^4.0.3",
+    "axios": "^0.24.0",
     "next": "latest",
-    "next-mdx-remote": "^3.0.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
