--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   },
   "dependencies": {
     "@notionhq/client": "^0.4.9",
+    "@tailwindcss/line-clamp": "^0.2.2",
     "axios": "^0.24.0",
-    "next": "latest",
+    "next": "^12.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
