--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "autoprefixer": "^10.2.6",
     "date-fns": "^2.25.0",
     "postcss": "^8.3.5",
+    "prettier": "2.5.1",
     "tailwindcss": "^2.2.4",
     "typescript": "^4.4.4"
   }
