--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@notionhq/client": "^0.4.9",
     "@tailwindcss/line-clamp": "^0.2.2",
     "axios": "^0.24.0",
+    "nanoid": "^3.1.30",
     "next": "^12.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
